# blurr

./: .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
config/: blurr.sh  cam_air.yaml  pins.txt
launch/: barometer.launch  boot.launch  cam.launch
scripts/: bar30.py
src/: pwm.cpp
