<?xml version="1.0"?>
<package format="3">
  <name>blurr</name>
  <version>0.0.1</version>
  <description>The blurr package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>navio2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
